css partials and storybook

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Identity Server</title>
     <link rel="stylesheet" href="https://use.typekit.net/yvk7fjz.css" />
-    <link rel="stylesheet" href="./base.css" />
+    <link rel="stylesheet" href="./css/base.css" />
+    <style>
+      html {
+        padding: 24px;
+      }
+    </style>
   </head>
   <h1>Heading 1</h1>
   <p>
@@ -111,10 +116,10 @@
       </label>
     </p>
     <p>
-      <button>Sign up</button>
-      <button type="reset">Reset form</button>
-      <button disabled="disabled">Disabled</button>
-      <button class="secondary">Sign up</button>
+      <button class="btn">Sign up</button>
+      <button class="btn" type="reset">Reset form</button>
+      <button class="btn" disabled="disabled">Disabled</button>
+      <button class="btn btn-secondary">Sign up</button>
     </p>
   </form>
 
