--- a/src/index.html
+++ b/src/index.html
@@ -12,123 +12,126 @@
       }
     </style>
   </head>
-  <h1>Heading 1</h1>
-  <p>
-    This is paragraph text. Lorem ipsum dolor sit amet consectetur adipisicing
-    elit.
-  </p>
-  <h2>Heading 2</h2>
-  <p>
-    This is paragraph text. Lorem ipsum dolor sit amet consectetur adipisicing
-    elit.
-  </p>
-  <h3>Heading 3</h3>
-  <p>
-    This is paragraph text. Lorem ipsum dolor sit amet consectetur adipisicing
-    elit.
-  </p>
-  <h4>Heading 4</h4>
-  <p>
-    This is paragraph text. Lorem ipsum dolor sit amet consectetur adipisicing
-    elit.
-  </p>
-  <h5>Heading 5</h5>
-  <p>
-    This is paragraph text. Lorem ipsum dolor sit amet consectetur adipisicing
-    elit.
-  </p>
-  <h6>Heading 6</h6>
-  <p>
-    This is paragraph text. Lorem ipsum dolor sit amet consectetur adipisicing
-    elit.
-  </p>
+  <body>
+    <h1>Heading 1</h1>
+    <p>
+      This is paragraph text. Lorem ipsum dolor sit amet consectetur adipisicing
+      elit.
+    </p>
+    <h2>Heading 2</h2>
+    <p>
+      This is paragraph text. Lorem ipsum dolor sit amet consectetur adipisicing
+      elit.
+    </p>
+    <h3>Heading 3</h3>
+    <p>
+      This is paragraph text. Lorem ipsum dolor sit amet consectetur adipisicing
+      elit.
+    </p>
+    <h4>Heading 4</h4>
+    <p>
+      This is paragraph text. Lorem ipsum dolor sit amet consectetur adipisicing
+      elit.
+    </p>
+    <h5>Heading 5</h5>
+    <p>
+      This is paragraph text. Lorem ipsum dolor sit amet consectetur adipisicing
+      elit.
+    </p>
+    <h6>Heading 6</h6>
+    <p>
+      This is paragraph text. Lorem ipsum dolor sit amet consectetur adipisicing
+      elit.
+    </p>
 
-  <br />
-  <hr />
-  <br />
+    <br />
+    <hr />
+    <br />
 
-  <p>
-    Lorem <mark>ipsum</mark> dolor sit amet
-    <strong>consectetur</strong> adipisicing elit. Aut
-    <i>harum molestias</i> labore amet possimus
-    <s>exercitationem aperiam</s> earum, doloribus <u>nobis ducimus</u> maiores
-    quia voluptates quis omnis molestiae quisquam.
-    <a href="#">Voluptatibus, officiis laudantium?</a>
-  </p>
+    <p>
+      Lorem <mark>ipsum</mark> dolor sit amet
+      <strong>consectetur</strong> adipisicing elit. Aut
+      <i>harum molestias</i> labore amet possimus
+      <s>exercitationem aperiam</s> earum, doloribus
+      <u>nobis ducimus</u> maiores quia voluptates quis omnis molestiae
+      quisquam.
+      <a href="#">Voluptatibus, officiis laudantium?</a>
+    </p>
 
-  <form>
-    <p>
-      <em
-        >This is not a real form and does not submit or save any
-        information.</em
-      >
-    </p>
-    <p>
-      <label>First name</label><br />
-      <input type="text" name="first_name" />
-    </p>
-    <p>
-      <label>Last name</label><br />
-      <input type="text" name="last_name" />
-    </p>
-    <p>
-      <label>Role</label><br />
-      <label>
-        <input type="radio" name="role" value="Monitored Client" />
-        Monitored Client
-      </label>
-      <br />
-      <label>
-        <input type="radio" name="role" value="Concerned Party" />
-        Concerned Part
-      </label>
-    </p>
-    <p>
-      <label>Email</label><br />
-      <input type="email" name="email" required="" />
-    </p>
-    <p>
-      <label>Phone number</label><br />
-      <input type="tel" name="phone" />
-    </p>
-    <p>
-      <label>Password</label><br />
-      <input type="password" name="password" />
-    </p>
-    <p>
-      <label>Favorite Flavor</label><br />
-      <select>
-        <option>Chocolate</option>
-        <option>Vanilla</option>
-        <option>Strawberry</option>
-        <option>Mint Chocolate Chip</option>
-        <option>Coffee</option>
-      </select>
-    </p>
-    <p>
-      <label>Comments</label><br />
-      <textarea></textarea>
-    </p>
-    <p>
-      <label>
-        <input type="checkbox" value="terms" />
-        I agree to the <a>terms and conditions</a>
-      </label>
-    </p>
-    <p>
-      <button class="btn">Sign up</button>
-      <button class="btn" type="reset">Reset form</button>
-      <button class="btn" disabled="disabled">Disabled</button>
-      <button class="btn btn-secondary">Sign up</button>
-      <button class="btn btn-block">Sign up</button>
-    </p>
-  </form>
+    <form>
+      <p>
+        <em
+          >This is not a real form and does not submit or save any
+          information.</em
+        >
+      </p>
+      <p>
+        <label>First name</label><br />
+        <input type="text" name="first_name" />
+      </p>
+      <p>
+        <label>Last name</label><br />
+        <input type="text" name="last_name" />
+      </p>
+      <p>
+        <label>Role</label><br />
+        <label>
+          <input type="radio" name="role" value="Monitored Client" />
+          Monitored Client
+        </label>
+        <br />
+        <label>
+          <input type="radio" name="role" value="Concerned Party" />
+          Concerned Part
+        </label>
+      </p>
+      <p>
+        <label>Email</label><br />
+        <input type="email" name="email" required="" />
+      </p>
+      <p>
+        <label>Phone number</label><br />
+        <input type="tel" name="phone" />
+      </p>
+      <p>
+        <label>Password</label><br />
+        <input type="password" name="password" />
+      </p>
+      <p>
+        <label>Favorite Flavor</label><br />
+        <select>
+          <option>Chocolate</option>
+          <option>Vanilla</option>
+          <option>Strawberry</option>
+          <option>Mint Chocolate Chip</option>
+          <option>Coffee</option>
+        </select>
+      </p>
+      <p>
+        <label>Comments</label><br />
+        <textarea></textarea>
+      </p>
+      <p>
+        <label>
+          <input type="checkbox" value="terms" />
+          I agree to the <a>terms and conditions</a>
+        </label>
+      </p>
+      <p>
+        <button class="btn">Sign up</button>
+        <button class="btn" type="reset">Reset form</button>
+        <button class="btn" disabled="disabled">Disabled</button>
+        <button class="btn btn-secondary">Sign up</button>
+        <button class="btn btn-block">Sign up</button>
+      </p>
+    </form>
 
-  <a href="#" class="button">Link Button</a>
-  <a href="#" class="button secondary">Link Button</a>
+    <a href="#" class="button">Link Button</a>
+    <a href="#" class="button secondary">Link Button</a>
 
-  <br />
-  <hr />
-  <br />
-  <body></body>
+    <br />
+    <hr />
+    <br />
+    <a href="./is-layout.html" class="btn btn-block">IS Stuff</a>
+  </body>
 </html>
