--- a/src/is-layout.html
+++ b/src/is-layout.html
@@ -16,14 +16,14 @@
       <form action="">
         <div>
           <label>Email</label><br />
-          <input type="email" name="email" required="" />
+          <input class="block" type="email" name="email" required="" />
         </div>
         <div>
           <div class="label-flex">
             <label>Password</label>
             <a href="#" class="label-link">Forgot Password?</a>
           </div>
-          <input type="email" name="email" required="" />
+          <input class="block" type="password" name="password" required="" />
         </div>
         <div class="form-actions">
           <button class="btn btn-block">Sign up</button>
