links, ghost button

--- a/src/is-layout.html
+++ b/src/is-layout.html
@@ -26,8 +26,8 @@
           <input class="block" type="password" name="password" required="" />
         </div>
         <div class="form-actions">
-          <button class="btn btn-block">Sign up</button>
-          <button class="btn btn-secondary">Sign up</button>
+          <button class="btn btn-block">Login</button>
+          <a href="#">Create Account</a>
         </div>
       </form>
     </div>
