--- a/src/is-layout.html
+++ b/src/is-layout.html
@@ -30,7 +30,7 @@
           </div>
           <div>
             <input type="checkbox" id="remember" name="remember" />
-            <label class="identity-form-check" for="remember"
+            <label class="label-regular-font" for="remember"
               >Remember this device</label
             >
           </div>
