switch to larget inputs

--- a/src/is-layout.html
+++ b/src/is-layout.html
@@ -19,14 +19,19 @@
         <form action="">
           <div>
             <label>Email</label><br />
-            <input class="block" type="email" name="email" required="" />
+            <input class="large block" type="email" name="email" required="" />
           </div>
           <div>
             <div class="label-flex">
               <label>Password</label>
               <a href="#" class="label-link">Forgot Password?</a>
             </div>
-            <input class="block" type="password" name="password" required="" />
+            <input
+              class="large block"
+              type="password"
+              name="password"
+              required=""
+            />
           </div>
           <div>
             <input type="checkbox" id="remember" name="remember" />
