base and error alerts

--- a/src/is-layout.html
+++ b/src/is-layout.html
@@ -15,7 +15,30 @@
     <main>
       <div class="identity-form-containter">
         <h4>Form Title</h4>
-        <div class="alert"></div>
+        <div class="alert">
+          <div class="alert-icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="none"
+              viewBox="0 0 16 16"
+            >
+              <g clip-path="url(#clip0)">
+                <path
+                  fill="#1C2224"
+                  d="M8 0a8 8 0 108 8 8.009 8.009 0 00-8-8zm3.467 11.48a.678.678 0 01-.942.042l-3.306-3.03A.666.666 0 017 8V4.333a.667.667 0 111.333 0v3.374l3.09 2.832a.666.666 0 01.044.942z"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0">
+                  <path fill="#fff" d="M0 0h16v16H0z" />
+                </clipPath>
+              </defs>
+            </svg>
+          </div>
+          This is an alert bar
+        </div>
         <form action="">
           <div>
             <label>Email</label><br />
