--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,41 @@
         <label>Password</label><br />
         <input type="password" name="password" />
       </p>
+      <br />
+      <div class="inupt-code">
+        <input
+          class="code-box"
+          id="codeBox1"
+          type="number"
+          maxlength="1"
+          onkeyup="onKeyUpEvent(1, event)"
+          onfocus="onFocusEvent(1)"
+        />
+        <input
+          class="code-box"
+          id="codeBox2"
+          type="number"
+          maxlength="1"
+          onkeyup="onKeyUpEvent(2, event)"
+          onfocus="onFocusEvent(2)"
+        />
+        <input
+          class="code-box"
+          id="codeBox3"
+          type="number"
+          maxlength="1"
+          onkeyup="onKeyUpEvent(3, event)"
+          onfocus="onFocusEvent(3)"
+        />
+        <input
+          class="code-box"
+          id="codeBox4"
+          type="number"
+          maxlength="1"
+          onkeyup="onKeyUpEvent(4, event)"
+          onfocus="onFocusEvent(4)"
+        />
+      </div>
       <p>
         <label>Favorite Flavor</label><br />
         <select>
@@ -125,9 +160,12 @@
         <button class="btn btn-block">Sign up</button>
       </p>
     </form>
-
-    <a href="#" class="button">Link Button</a>
-    <a href="#" class="button secondary">Link Button</a>
+    <br />
+    <a href="#">Link</a>
+    <a href="#" class="btn">Link btn</a>
+    <a href="#" class="btn btn-secondary">Link btn Primary</a>
+    <a href="#" class="btn btn-secondary">Link btn Secondary</a>
+    <a href="#" class="btn btn-ghost">Link btn Ghost</a>
 
     <br />
     <hr />
@@ -158,5 +196,35 @@
     </div>
     <br />
     <a href="./is-layout.html" class="btn btn-block">IS Stuff</a>
+
+    <script>
+      function getCodeBoxElement(index) {
+        return document.getElementById("codeBox" + index);
+      }
+      function onKeyUpEvent(index, event) {
+        const eventCode = event.which || event.keyCode;
+        if (getCodeBoxElement(index).value.length === 1) {
+          if (index !== 4) {
+            getCodeBoxElement(index + 1).focus();
+          } else {
+            getCodeBoxElement(index).blur();
+            // Submit code
+            console.log("submit code ");
+          }
+        }
+        if (eventCode === 8 && index !== 1) {
+          getCodeBoxElement(index - 1).focus();
+        }
+      }
+      function onFocusEvent(index) {
+        for (item = 1; item < index; item++) {
+          const currentElement = getCodeBoxElement(item);
+          if (!currentElement.value) {
+            currentElement.focus();
+            break;
+          }
+        }
+      }
+    </script>
   </body>
 </html>
