add custom checkbox

--- a/src/is-layout.html
+++ b/src/is-layout.html
@@ -57,10 +57,16 @@
             />
           </div>
           <div>
-            <input type="checkbox" id="remember" name="remember" />
+            <!-- <input type="checkbox" id="remember" name="remember" />
             <label class="label-regular-font" for="remember"
               >Remember this device</label
             >
+          </div> -->
+          <div>
+            <label class="check-radio-container label-regular-font">First checkbox
+              <input type="checkbox" checked="checked"/>
+              <div class="checkmark"></div>
+              </label>
           </div>
           <div class="form-actions">
             <button class="btn btn-block">Login</button>
