--- a/src/index.html
+++ b/src/index.html
@@ -147,8 +147,9 @@
         <textarea></textarea>
       </p>
       <p>
-        <label>
+        <label class="check-radio-container">
           <input type="checkbox" value="terms" />
+          <div class="checkmark"></div>
           I agree to the <a>terms and conditions</a>
         </label>
       </p>
