--- a/src/is-layout.html
+++ b/src/is-layout.html
@@ -14,7 +14,7 @@
     </div>
     <main>
       <div class="identity-form-containter">
-        <h4>Form Title</h4>
+        <h4 class="form-title">Form Title</h4>
         <div class="alert">
           <div class="alert-icon">
             <svg
