--- a/src/is-layout.html
+++ b/src/is-layout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Identity Server</title>
     <link rel="stylesheet" href="https://use.typekit.net/yvk7fjz.css" />
-    <link rel="stylesheet" href="./css/base.css" />
+    <link rel="stylesheet" href="./css/atrium-styles.css" />
     <link rel="stylesheet" href="./css/identity-styles.css" />
   </head>
   <body>
