add links to footer

--- a/src/is-layout.html
+++ b/src/is-layout.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="logo">
-      <img src="./static/soberlink logomark.svg" alt="Soberlink Logo" />
+      <img src="./static/soberlink-logomark.svg" alt="Soberlink Logo" />
     </div>
     <main>
       <div class="identity-form-containter">
@@ -78,12 +78,12 @@
     <footer class="identity-footer">
       <ul>
         <li>
-          <a href="">Support</a>
+          <a href="mailto:support@soberlink.com">Support</a>
         </li>
-        <li><a href="">Privacy Policy</a></li>
-        <li><a href="">HIPAA Compliant Statement</a></li>
-        <li><a href="">Terms & Conditions</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="https://www.soberlink.com/privacy-policy/">Privacy Policy</a></li>
+        <li><a href="https://www.soberlink.com/hipaa-compliant-statement/">HIPAA Compliant Statement</a></li>
+        <li><a href="https://www.soberlink.com/general-tc/">Terms & Conditions</a></li>
+        <li><a href="https://www.soberlink.com/contact-us/">Contact</a></li>
       </ul>
     </footer>
   </body>
