--- a/src/is-layout.html
+++ b/src/is-layout.html
@@ -53,6 +53,7 @@
               class="large block"
               type="password"
               name="password"
+              autocomplete="current-password" 
               required=""
             />
           </div>
