--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
         <input type="password" name="password" />
       </p>
       <br />
-      <div class="inupt-code">
+      <div class="input-code">
         <input
           class="code-box"
           id="codeBox1"
